# CGFinalProject2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cube-vert.txt
assets/: project.canis
assets/maps/: level.map
assets/models/: fire_model_clipped.mtl  stairs_outer.mtl
assets/shaders/: 3.3.shader.fs  3.3.shader.vs  final.fs  final.vs  hello_shader.fs  hello_shader.vs  light_map.fs  light_map.vs  lighting.fs  skybox.fs  skybox.vs
blender/: cube.blend  plants_fire.blend
src/: main.cpp
src/Canis/: Blocks.cpp  Blocks.hpp  Camera.cpp  Camera.hpp  Canis.cpp  Canis.hpp  Debug.cpp  Debug.hpp  Editor.cpp  Editor.hpp  Entity.hpp  FrameRateManager.cpp  FrameRateManager.hpp  IOManager.cpp  IOManager.hpp  InputManager.cpp  InputManager.hpp  Lights.cpp  Lights.hpp  Map.cpp  Map.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp
src/Canis/Data/: DirectionalLight.hpp  GLTexture.hpp  PointLight.hpp  Transform.hpp
